
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 size_t nitems (char const*) ;
 size_t random () ;

__attribute__((used)) static char
rdigit(void)
{
 const char a[] = {
  0x10,0x54,0x11,0x48,0x45,0x12,0x4f,0x13,0x49,0x53,0x14,0x41,
  0x15,0x16,0x4e,0x55,0x54,0x17,0x18,0x4a,0x4f,0x42,0x19,0x01
 };
 return 0x20+a[random()%nitems(a)];
}
