; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/crypto/extr_cryptocheck.c_rdigit.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/crypto/extr_cryptocheck.c_rdigit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.rdigit.a = private unnamed_addr constant [24 x i8] c"\10T\11HE\12O\13IS\14A\15\16NUT\17\18JOB\19\01", align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 ()* @rdigit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal signext i8 @rdigit() #0 {
  %1 = alloca [24 x i8], align 16
  %2 = bitcast [24 x i8]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %2, i8* align 16 getelementptr inbounds ([24 x i8], [24 x i8]* @__const.rdigit.a, i32 0, i32 0), i64 24, i1 false)
  %3 = call i64 (...) @random()
  %4 = getelementptr inbounds [24 x i8], [24 x i8]* %1, i64 0, i64 0
  %5 = call i64 @nitems(i8* %4)
  %6 = urem i64 %3, %5
  %7 = getelementptr inbounds [24 x i8], [24 x i8]* %1, i64 0, i64 %6
  %8 = load i8, i8* %7, align 1
  %9 = sext i8 %8 to i32
  %10 = add nsw i32 32, %9
  %11 = trunc i32 %10 to i8
  ret i8 %11
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @random(...) #2

declare dso_local i64 @nitems(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
